NJ - 10/10/04 - Made irclogin() much more simple
NJ - 10/10/04 - Added sendnickserv() so users can have their bot automatically identify to nickserv
NJ - 13/11/04 - Added remchan() to reverse addchan()
NJ - 13/11/04 - Added !list as a debugging tool (list channels the bot is on)
NJ - 13/11/04 - Fixed !part to fix bug #2614 (!part Parts the wrong channel)
NJ - 13/11/04 - Added ircbpconfig.py
NJ - 13/11/04 - All the "lists" (I call them arrays) are now held in the new module.
NJ - 13/11/04 - README fixed up.
NJ - 13/11/04 - Added svn:ignore *.pyc because we don't need to import compiled python modules into the repo)
NJ - 13/11/04 - Found a problem with all the commands, it was checking for NICKNAME instead of ircbpconfig.NICKNAME
NJ - 13/11/04 - Cleaned up some debug stuff I added when I was having trouble with the module.
NJ - 13/11/04 - Added "DANCERMODE" so we can seperate Dancer only behaviour.  Planning to do this for other IRCds.
NJ - 13/11/04 - Bot now supports DancerIRCd forwarding.  Fixes bug #2782 (Bot doesn't follow Dancer Forwarding)
NJ - 14/11/04 - Added new lines to ircbpconfig.py
NJ - 14/11/04 - Added checking for 'join-blocking' numerics
NJ - 14/11/04 - Made handling for 'join-blocking' numerics check if that was the last channel, if so it will quit cleaning fixing bug #2781 (Bot doesn't phase RAW messages)
NJ - 14/11/04 - Added the DancerIRCd 'join-blocking' numerics
NJ - 14/11/04 - Fixed some of the tabbing
NJ - 14/11/04 - Fix a TINY bug... (I added a '.' after a function and python didn't like it.
NJ - 14/11/04 - Made the bot rejoin when kicked.
NJ - 14/11/04 - Updated mktxt.sh (so it will make README.txt
NJ - 14/11/04 - Got rid of the .txt files as we can just mktxt them for releases (e.g. Windows users that are able to download source from SVN should be able to read these files via open with)
NJ - 14/11/04 - RELEASE - 0.1.1
NJ - 14/11/04 - Tag to /framework/tags/REL-0.1.1