@@ -5,7 +5,7 @@
 # Some Portions are copyright to Gian Mario Tagliaretti, portions of his code will be replaced shortly	#
 #########################################################################################################
 
-# $Id$ #
+# $Id: ircbp.py 42 2004-11-13 23:34:31Z nigelj $ #
 
 #################################################
 # The main developers are:			#
@@ -26,9 +26,26 @@
 
 # Introduce Arrays for Users/Channels and Prefixes
 
+import _mysql
+
 privledged = []
 channels = []
 prefixes = []
+
+class mysqlconfig:
+    SQLHOST = 'localhost'
+    SQLUSER = 'IRCBP'
+    SQLPASS = ''
+    SQLPORT = 3306
+
+sqlconfig = mysqlconfig()
+
+db=_mysql.connect(host=sqlconfig.SQLHOST, user=sqlconfig.SQLUSER, passwd=sqlconfig.SQLPASS, db='IRCBP', port=sqlconfig.SQLPORT)
+
+db.query("""SELECT * from config""")
+config=db.use_result()
+configr=config.fetch_row()
+
 
 # Add functions for Users/Channels and Prefixes
 def addmask(HOSTMASK):
@@ -50,8 +67,8 @@ addchan('#IRCBP')
 
 # Bot Nickname and Realname (Must not be null) for the IRC Bot to use
     
-NICKNAME = 'IRCBP'
-REALNAME = 'The Internet Chat Relay Bot Project'
+NICKNAME = configr[0][0]
+REALNAME = configr[0][1]
     
 # Add your bots nickserv password here, if none leave blank!
 
@@ -61,14 +78,14 @@ NSPASSWORD = ''
 # In future this should be in a seperate file!
     
 # IRC Server DNS Name OR IP
-SERVER = 'irc.freenode.net'
+SERVER = configr[0][2]
     
 # Port IRC Server Listerns on
-PORT = 6667
+PORT = int(configr[0][3])
 
 # Password for logining into the server (normally blank unless you have a special I:line)
-SVRPASSWORD = ''
+SVRPASSWORD = configr[0][4]
 
 # 1 if using a IRCd that you are connecting to is DancerIRCd (Freenode for example)
 # 0 if not
-DANCERMODE = 1
+DANCERMODE = int(configr[0][5])
