@@ -56,3 +56,6 @@ NJ - 14/11/04 - Updated mktxt.sh (so it will make README.txt
 NJ - 14/11/04 - Got rid of the .txt files as we can just mktxt them for releases (e.g. Windows users that are able to download source from SVN should be able to read these files via open with)
 NJ - 14/11/04 - RELEASE - 0.1.1
 NJ - 14/11/04 - Tag to /framework/tags/REL-0.1.1
+NJ - 15/11/04 - Started implementing SQL to the bot.
+NJ - 15/11/04 - Worked out a config table system
+NJ - 15/11/04 - Implemented all the DB calls but have not yet got a NSPASSWD coloum in yet...
